# python-hnap

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.cfg
dchs220/: __init__.py  cli.py  devices.py  siren.py  soapclient.py
hnap/: __init__.py  __main__.py  cli.py  const.py  devices.py  helpers.py  soapclient.py
