# https://packaging.python.org/tutorials/packaging-projects/

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[project]
name = "hnap"
version = "1.0.1"
dependencies = [
    "requests>=2.27.1",
    "xmltodict>=0.12.0",
    "importlib-metadata; python_version >= '3.11'",
]
authors = [
  { name="Luis Lopez", email=" luis@cuarentaydos.com" },
]
description = "Python clients for HNAP devices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ldotlopez/python-hnap"
"Bug Tracker" = "https://github.com/ldotlopez/python-hnap/issues"

[project.scripts]
hnap = "hnap.cli:main"
