# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = dchs220
version = 0.0.0
author = Luis López
author_email = luis@cuarentaydos.com
description = Python API for D-Link S220 sirens
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ldotlopez/dchs220
project_urls =
    Bug Tracker = https://github.com/ldotlopez/dchs220/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    dchs220 = dchs220
packages = find:
python_requires = >=3.9
install_requires =
   requests

[options.packages.find]
where =

#[options.entry_points]
#console_scripts =
#    dchs220 = dchs220.cli:main
